changed DMBS link

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <img src="./Figures/mmwave.jpg" alt="alt text" width="500px" height="300px" />&nbsp;</td>
 <td align="left"><p><b>Directional mmWave Communication.</b><br /><br /></p>
 <ul>
-<li><p>Directional MAC Protocol for IEEE 802.11ad WLANs. <a href="./Docs/Directional_MAC_Protocol.pdf">(pdf)</a>  <b>(<a href="https://aniqueakhtar.github.io/publications/MAC/">PROJECT LINK</a>)</b></p>
+<li><p>Directional MAC Protocol for IEEE 802.11ad WLANs. <a href="./Docs/Directional_MAC_Protocol.pdf">(pdf)</a>  <b>(<a href="https://aniqueakhtar.github.io/publications/MAC/DMBS.html">PROJECT LINK</a>)</b></p>
 </li>
 <li><p>Efficient Network Level Beamforming Training for IEEE 802.11ad WLANs. <a href="./Docs/Beamforming_Training.pdf">(pdf)</a></p>
 </li>
@@ -228,7 +228,7 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, S. Coleri Ergen, &ldquo;Directional MAC Protocol for IEEE 802.11ad WLANs&rdquo;
-<br /> Ad Hoc Networks, 2018.  <a href="./Docs/Directional_MAC_Protocol.pdf">(pdf)</a>  <b>(<a href="https://aniqueakhtar.github.io/publications/MAC/">Protocol's website with explanation and open source code</a>)</b>
+<br /> Ad Hoc Networks, 2018.  <a href="./Docs/Directional_MAC_Protocol.pdf">(pdf)</a>  <b>(<a href="https://aniqueakhtar.github.io/publications/MAC/DMBS.html">Protocol's website with explanation and open source code</a>)</b>
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, S. Coleri Ergen, &ldquo;Efficient Network Level Beamforming Training for IEEE 802.11ad WLANs&rdquo;
@@ -410,12 +410,12 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-15 19:28:22 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-15 19:48:37 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
 <!-- Default Statcounter code for Personal Website
-http://a.web.umkc.edu/aa95b/ -->
+https://aniqueakhtar.github.io/ -->
 <script type="text/javascript">
 var sc_project=11802621;
 var sc_invisible=1;
