--- a/publications/MAC/DMBS.html
+++ b/publications/MAC/DMBS.html
@@ -102,7 +102,7 @@ incoming packets.</p>
 </li>
 </ul>
 <ul>
-<li><p>The code is fully commented and is easy to understand. If there are still any questions, you can reach us at <i>aniqueakhtar@mail.umkc.edu\n </i></p>
+<li><p>The code is fully commented and is easy to understand. If there are still any questions, you can reach us at <i>aniqueakhtar@mail.umkc.edu </i></p>
 </li>
 </ul>
 </div></div>
@@ -125,7 +125,7 @@ helps with location tracking and decreases the beamforming associated overhead o
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-15 19:51:27 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-15 19:53:13 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
