Updated the website with newer works and images

--- a/index.html
+++ b/index.html
@@ -62,6 +62,63 @@ Prior to coming to Koc University, I did my B.Sc in Electrical Engineering at <a
 </div></div>
 <h2>Project Work</h2>
 <table class="imgtable"><tr><td>
+<img src="./Figures/Inter-prediction.png" alt="alt text" width="510px" />&nbsp;</td>
+<td align="left"><p><b>Inter-prediction in Point Cloud Compression with Sparse Convolutional Networks</b> <br /><br />
+Internship work at <a href="https://www.qualcomm.com/">Qualcomm</a>.</p>
+<ul>
+<li><p>Deep learning solution for inter-frame compression of high resolution point clouds.</p>
+</li>
+<li><p>Proposed I, B, and P-frame encoding framework.</p>
+</li>
+</ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="./Figures/ScanObjectNN.png" alt="alt text" width="510px" />&nbsp;</td>
+<td align="left"><p><b>PU-Dense: Sparse Tensor-based Point Cloud Geometry Upsampling</b> <b><a href="https://aniqueakhtar.github.io/publications/PU-Dense">(Project Page)</a></b> <a href="https://github.com/aniqueakhtar/PointCloudUpsampling">(GitHub)</a><br /><br />
+Internship work at <a href="https://www.qualcomm.com/">Qualcomm</a>.</p>
+<ul>
+<li><p>A sparse convolution-based point cloud upsampling solution that works on synthetic mesh-based dataset, sparse LiDAR-based point clouds, as well as dense high-resolution photo-realistic point clouds.</p>
+</li>
+<li><p>The current state-of-the-art in point cloud upsampling.</p>
+</li>
+</ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="./Figures/Interpolation.png" alt="alt text" width="510px" />&nbsp;</td>
+<td align="left"><p><b>Dynamic Point Cloud Interpolation.</b> <a href="./Docs/Akhtar.ICASSP.2022.pdf">(pdf)</a><br /><br />
+Internship work at <a href="https://www.qualcomm.com/">Qualcomm</a>.</p>
+<ul>
+<li><p>Deep learning-based point cloud interpolation framework for photorealistic dynamic point clouds. </p>
+</li>
+<li><p>Given two consecutive dynamic point cloud frames, the framework aims to generate intermediate frame(s) between them.</p>
+</li>
+</ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="./Figures/Artifact_removal.png" alt="alt text" width="510px" />&nbsp;</td>
+<td align="left"><p><b>Video-based Point Cloud Compression (V-PCC) Artifact Removal.</b> <a href="https://arxiv.org/abs/2107.14179">(pdf)</a><br /><br />
+Summer Internship work at <a href="https://www.tencent.com/">Tencent</a>.</p>
+<ul>
+<li><p>Video-based Point Cloud Compression (V-PCC) standards introduces quantization at lower bitrate resulting in artifacts in the reconstructed point cloud.</p>
+</li>
+<li><p>We propose a deep learning-based V-PCC artifact removal framework.</p>
+</li>
+<li><p>We exploit the prior knowledge of the direction of quantization noise in V-PCC to learn both the direction as well as level of quantization noise by limiting the degree of freedom of the learned noise.</p>
+</li>
+</ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="./Figures/Geometry_prediction.gif" alt="alt text" width="510px" />&nbsp;</td>
+<td align="left"><p><b>Point Cloud Geometry Prediction Across Spatial Scale.</b> <a href="./Docs/Geometry_prediction.pdf">(pdf)</a> <br /><br />
+Summer Internship work at <a href="https://www.tencent.com/">Tencent</a>.</p>
+<ul>
+<li><p>We propose a deep learning solution for point cloud geometry prediction scheme to upsample a lower Level-of-Detail (LoD) point cloud into a higher LoD point cloud. </p>
+</li>
+<li><p>We employ an octree-type upsampling solution to predict geometry across spatial scale.</p>
+</li>
+</ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
 <img src="./Figures/2dsegmentation.gif" alt="alt text" width="500px" height="340px" />&nbsp;</td>
 <td align="left"><p><b>2D Penoptic Segmentation on street level imagery (SLI) from <a href="https://www.here.com/en">HERE</a> True Drives.</b><br /><br />
 Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p>
@@ -253,7 +310,7 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 </li>
 </ul>
 <ul>
-<li><p><b><a href="https://www.here.com/en">Tencent</a></b>.   3 months: (June. 2020 - Aug 2020) <br /></p>
+<li><p><b><a href="https://www.tencent.com/">Tencent</a></b>.   3 months: (June. 2020 - Aug 2020) <br /></p>
 <ul>
 <li><p>Video-based Point Cloud Compression (V-PCC) Artifact Removal.</p>
 </li>
@@ -410,7 +467,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-15 19:48:37 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-15 20:54:52 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
