Added the patent

--- a/index.html
+++ b/index.html
@@ -295,6 +295,14 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
+<h2>Patents</h2>
+<ul>
+<li><p><b>A. Akhtar</b>, W. Gao, X. Zhang, and S. Liu, TENCENT AMERICA LLC, 2022. POINT CLOUD GEOMETRY UPSAMPLING. U.S. Patent Application 17/345,063.</p>
+</li>
+</ul>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
 <h2>Work Experience</h2>
 <ul>
 <li><p><b><a href="https://www.qualcomm.com/">Qualcomm</a></b>.   Current: (January. 2022 - Present) <br /></p>
@@ -467,7 +475,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-15 20:54:52 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-15 21:14:04 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
