Added New Paper to Resume and Website

--- a/index.html
+++ b/index.html
@@ -268,6 +268,10 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <br /> IEEE Transactions on Multimedia (T-MM), 2021. <a href="https://arxiv.org/abs/2107.14179">(pdf)</a>
 <br /><br /></p>
 </li>
+<li><p>W. Jia, L. Li, <b>A. Akhtar</b>, Z. Li, and S. Liu, “Convolutional Neural Network-based Occupancy Map Accuracy Improvement for Video-based Point Cloud Compression”,
+<br /> IEEE Transactions on Multimedia (T-MM), 2021.
+<br /><br /></p>
+</li>
 <li><p><b>A. Akhtar</b>, W. Gao, L. Li, Z. Li, X. Zhang, and S. Liu, &ldquo;Point Cloud Geometry Prediction Across Spatial Scale using Deep Learning&rdquo;, 
 <br /> IEEE Visual Communication &amp; Image Processing Conf (VCIP), Hong Kong, 2020. <a href="./Docs/Geometry_prediction.pdf">(pdf)</a>
 <br /><br /></p>
@@ -475,7 +479,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-15 22:05:47 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-15 22:09:15 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
