added link to scholar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ Department of Computer and Electrical Engineering <br />
 University of Missouri - Kansas City, Missouri, USA <br />
 Advisor: <a href="http://l.web.umkc.edu/lizhu/">Dr. Zhu Li</a><br /></p>
 <p><a href="./Docs/Resume_A_Akhtar.pdf">Resume (last updated: February 2022)</a><br />
-Email: aniqueakhtar AT mail DOT umkc DOT edu </p>
+Email: aniqueakhtar AT mail DOT umkc DOT edu <br />
+<a href="https://scholar.google.com/citations?hl=en&amp;user=hL-LaAQAAAAJ&amp;sortby=pubdate">Google Scholar Link</a></p>
 </td></tr></table>
 <p><br />
 I am a Ph.D. student in the Computer and Electrical Engineering department at University of Missouri - Kansas City. I am currently working under <a href="http://l.web.umkc.edu/lizhu/">Dr. Zhu Li</a> in the Multimedia Computing & Communication Lab.<br /><br />
@@ -199,7 +200,7 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="./Figures/deep_learning.jpg" alt="alt text" width="500px" height="250px" />&nbsp;</td>
-<td align="left"><p><b>Deep Learning</b><br /><br /></p>
+<td align="left"><p><b>Deep Learning (Older Work)</b><br /><br /></p>
 <ul>
 <li><p>Deep Super Resolution Networks for SIFT point repeatability.<br /></p>
 <ul>
@@ -479,7 +480,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-15 22:09:15 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-17 21:48:05 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
