--- a/publications/PU-Dense/index.html
+++ b/publications/PU-Dense/index.html
@@ -465,3 +465,22 @@ noise, respectively. Right: (a2), (b2), and (c2) are the upsampled results from 
 		<br>
 		<br>
 -->
+	  
+	  
+<!-- Default Statcounter code for PU-Dense
+https://aniqueakhtar.github.io/publications/PU-Dense/ -->
+<script type="text/javascript">
+var sc_project=12724534; 
+var sc_invisible=1; 
+var sc_security="c4165498"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics
+Made Easy - Statcounter" href="https://statcounter.com/"
+target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12724534/0/c4165498/1/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
