Updated Resume and webpage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Ph.D. Student <br />
 Department of Computer and Electrical Engineering <br />
 University of Missouri - Kansas City, Missouri, USA <br />
 Advisor: <a href="http://l.web.umkc.edu/lizhu/">Dr. Zhu Li</a><br /></p>
-<p><a href="./Docs/Resume_A_Akhtar.pdf">Resume (last updated: February 2022)</a><br />
+<p><a href="./Docs/Resume_A_Akhtar.pdf">Resume (last updated: April 2022)</a><br />
 Email: aniqueakhtar AT mail DOT umkc DOT edu <br />
 <a href="https://scholar.google.com/citations?hl=en&amp;user=hL-LaAQAAAAJ&amp;sortby=pubdate">Google Scholar Link</a></p>
 </td></tr></table>
@@ -253,12 +253,12 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <div class="blockcontent">
 <h2>Publications</h2>
 <ul>
-<li><p><b>A. Akhtar</b>, Z. Li, and G. Van der Auwera, “Inter-prediction in Point Cloud Compression with Sparse Convolutional Networks”
+<li><p><b>A. Akhtar</b>, Z. Li, and G. Van der Auwera, “Inter-Frame Compression for Dynamic Point Cloud Geometry Coding”
 <br />Under review in a Conference. 2022
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, Z. Li, G. Van der Auwera, L. Li, and J. Chen, “PU-Dense: Sparse Tensor-based Point Cloud Geometry Upsampling” <b><a href="https://aniqueakhtar.github.io/publications/PU-Dense">(Project Page)</a></b> <a href="https://github.com/aniqueakhtar/PointCloudUpsampling">(GitHub)</a>
-<br />Under review in IEEE Transactions on Image Processing (TIP). 2022
+<br />IEEE Transactions on Image Processing (TIP). 2022
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, Z. Li, G. Van der Auwera, and J. Chen, “Dynamic Point Cloud Interpolation”
@@ -303,6 +303,15 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <h2>Patents</h2>
 <ul>
 <li><p><b>A. Akhtar</b>, W. Gao, X. Zhang, and S. Liu, TENCENT AMERICA LLC, 2022. POINT CLOUD GEOMETRY UPSAMPLING. U.S. Patent Application 17/345,063.</p>
+</li>
+</ul>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<h2>MPEG Contributions</h2>
+<ul>
+<li><p>m59617. &ldquo;[AI-3DGC] Dynamic Point Cloud Geometry Compression using Sparse Convolutions&rdquo;
+<br /> <b>Anique Akhtar</b>, Zhu Li (UMKC), Geert Van der Auwera, Adarsh Krishnan Ramasubramonian, Luong Pham Van, Marta Karczewicz (Qualcomm)</p>
 </li>
 </ul>
 </div></div>
@@ -480,7 +489,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-17 21:48:05 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-24 20:37:44 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
