--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@ Prior to coming to Koc University, I did my B.Sc in Electrical Engineering at <a
 <br /></p>
 <div class="infoblock">
 <div class="blockcontent">
+<h2>Announcements</h2>
+<ul>
+<li><p>Made an official contribution and presented work in <i>MPEG WG 07 3D Graphics Coding</i> meeting regarding deep learning-based dynamic point cloud coding. <b>April 2022</b></p>
+</li>
+<li><p>Invited to <i>MPEG WG 07 3D Graphics Coding</i> meeting as a point cloud expert. <b>April 2022</b></p>
+</li>
+<li><p>PU-Dense work accepted in Transactions on Image Processing (TIP). <b>March 2022</b></p>
+</li>
+<li><p>First inventor on the patent: <i>Point Cloud Geometry Upsampling</i>. U.S. Patent Application 17/345,063. <b>Jan 2022</b></p>
+</li>
+</ul>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
 <h2>Research</h2>
 <ul>
 <li><p>Inter-frame and Intra-frame Point Cloud Prediction Schemes.</p>
@@ -489,7 +503,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-24 20:37:44 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-27 11:17:36 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
