added outstanding doctoral award

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ Prior to coming to Koc University, I did my B.Sc in Electrical Engineering at <a
 <div class="blockcontent">
 <h2>Announcements</h2>
 <ul>
+<li><p>Recipient of the annual award for <b>Outstanding Doctoral Student in Electrical and Computer Engineering</b> for the academic year 2021-22. <b>May 2022</b></p>
+</li>
 <li><p>Made an official contribution and presented work in <i>MPEG WG 07 3D Graphics Coding</i> meeting regarding dynamic point cloud coding. <b>April 2022</b></p>
 </li>
 <li><p>Invited to <i>MPEG WG 07 3D Graphics Coding</i> meeting as a point cloud expert. <b>April 2022</b></p>
@@ -507,7 +509,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-27 11:24:02 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-04 13:42:12 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
