--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 <body>
 <div id="layout-content">
 <div id="toptitle">
-<h1>Anique Akhtar      &nbsp; &nbsp; &nbsp;        </h1>
+<h1>Anique Akhtar      &nbsp; &nbsp; &nbsp;</h1>
 </div>
 <table class="imgtable"><tr><td>
 <img src="./Figures/photo3.jpg" alt="Photo" width="302px" height="403px" />&nbsp;</td>
-<td align="left"><p>Anique Akhtar<br />
-Ph.D. Student <br />
-Department of Computer and Electrical Engineering <br />
+<td align="left"><p>Anique Akhtar <br />
+Senior Engineer at Qualcomm Inc. <br />
+Ph.D. Doctorate in Computer and Electrical Engineering from <br />
 University of Missouri - Kansas City, Missouri, USA <br />
 Advisor: <a href="http://l.web.umkc.edu/lizhu/">Dr. Zhu Li</a><br /></p>
-<p><a href="./Docs/Resume_A_Akhtar.pdf">Resume (last updated: April 2022)</a><br />
-Email: aniqueakhtar AT mail DOT umkc DOT edu <br />
-<a href="https://scholar.google.com/citations?hl=en&amp;user=hL-LaAQAAAAJ&amp;sortby=pubdate">Google Scholar Link</a></p>
+<p><a href="./Docs/Resume_A_Akhtar.pdf">Resume (last updated: March 2023)</a><br />
+Email: akhtaranique AT gmail DOT com <br />
+<a href="https://scholar.google.com/citations?hl=en&amp;user=hL-LaAQAAAAJ&amp;sortby=pubdate">Google Scholar Link</a> <br />
+<a href="https://www.linkedin.com/in/aniqueakhtar/">LinkedIn</a></p>
 </td></tr></table>
 <p><br />
-I am a Ph.D. student in the Computer and Electrical Engineering department at University of Missouri - Kansas City. I am currently working under <a href="http://l.web.umkc.edu/lizhu/">Dr. Zhu Li</a> in the Multimedia Computing & Communication Lab.<br /><br />
+I am currently working as a Senior Engineer at Qualcomm Inc. working in the Multimedia, Research, and Development (MMRND) team in San Diego, California. <br /><br />
+I completed my Ph.D. in Computer and Electrical Engineering from University of Missouri - Kansas City. During my doctorate, I was working under <a href="http://l.web.umkc.edu/lizhu/">Dr. Zhu Li</a> in the Multimedia Computing & Communication Lab.<br /><br />
 I did my M.S. in Electrical Engineering from <a href="http://www.ku.edu.tr/">Koc University</a>, Istanbul, Turkey,
 where I worked under <a href="http://home.ku.edu.tr/~sergen/">Dr. Sinem Coleri Ergen</a> in the <a href="http://wnl.ku.edu.tr/">Wireless Networks Laboratory</a> on 60 GHz directional wireless Communication.<br /><br />
-Prior to coming to Koc University, I did my B.Sc in Electrical Engineering at <a href="http://www.lums.edu.pk/">Lahore University of Management Sciences (LUMS)</a>, Lahore, Pakistan. 
+Prior to coming to Koc University, I did my B.Sc in Electrical Engineering at <a href="http://www.lums.edu.pk/">Lahore University of Management Sciences (LUMS)</a>, Lahore, Pakistan.
 <br /></p>
 <div class="infoblock">
 <div class="blockcontent">
@@ -109,7 +111,7 @@ Internship work at <a href="https://www.qualcomm.com/">Qualcomm</a>.</p>
 <td align="left"><p><b>Dynamic Point Cloud Interpolation.</b> <a href="./Docs/Akhtar.ICASSP.2022.pdf">(pdf)</a><br /><br />
 Internship work at <a href="https://www.qualcomm.com/">Qualcomm</a>.</p>
 <ul>
-<li><p>Deep learning-based point cloud interpolation framework for photorealistic dynamic point clouds. </p>
+<li><p>Deep learning-based point cloud interpolation framework for photorealistic dynamic point clouds.</p>
 </li>
 <li><p>Given two consecutive dynamic point cloud frames, the framework aims to generate intermediate frame(s) between them.</p>
 </li>
@@ -133,7 +135,7 @@ Summer Internship work at <a href="https://www.tencent.com/">Tencent</a>.</p>
 <td align="left"><p><b>Point Cloud Geometry Prediction Across Spatial Scale.</b> <a href="./Docs/Geometry_prediction.pdf">(pdf)</a> <br /><br />
 Summer Internship work at <a href="https://www.tencent.com/">Tencent</a>.</p>
 <ul>
-<li><p>We propose a deep learning solution for point cloud geometry prediction scheme to upsample a lower Level-of-Detail (LoD) point cloud into a higher LoD point cloud. </p>
+<li><p>We propose a deep learning solution for point cloud geometry prediction scheme to upsample a lower Level-of-Detail (LoD) point cloud into a higher LoD point cloud.</p>
 </li>
 <li><p>We employ an octree-type upsampling solution to predict geometry across spatial scale.</p>
 </li>
@@ -153,7 +155,7 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <table class="imgtable"><tr><td>
 <img src="./Figures/denoising.gif" alt="alt text" width="500px" height="440px" />&nbsp;</td>
 <td align="left"><p><b>Point Cloud Denoising.</b><br /><br />
-Point clouds obtained from 3D scanners or by image-based reconstruction techniques are often corrupted with a significant amount of non-negligible noise. </p>
+Point clouds obtained from 3D scanners or by image-based reconstruction techniques are often corrupted with a significant amount of non-negligible noise.</p>
 <ul>
 <li><p>We propose a two-stage deep neural network that takes in 3D point cloud data and outputs a denoised point cloud.</p>
 </li>
@@ -274,18 +276,18 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <h2>Publications</h2>
 <ul>
 <li><p><b>A. Akhtar</b>, Z. Li, and G. Van der Auwera, “Inter-Frame Compression for Dynamic Point Cloud Geometry Coding”
-<br />Under review in a Conference. 2022
+<br />Under peer review. 2022 <a href="https://arxiv.org/pdf/2207.12554.pdf">(pdf)</a>
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, Z. Li, G. Van der Auwera, L. Li, and J. Chen, “PU-Dense: Sparse Tensor-based Point Cloud Geometry Upsampling” <b><a href="https://aniqueakhtar.github.io/publications/PU-Dense">(Project Page)</a></b> <a href="https://github.com/aniqueakhtar/PointCloudUpsampling">(GitHub)</a>
-<br />IEEE Transactions on Image Processing (TIP). 2022
+<br />IEEE Transactions on Image Processing (TIP). 2022 <a href="https://ieeexplore.ieee.org/abstract/document/9794916">(pdf)</a>
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, Z. Li, G. Van der Auwera, and J. Chen, “Dynamic Point Cloud Interpolation”
 <br />IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). 2022. <a href="./Docs/Akhtar.ICASSP.2022.pdf">(pdf)</a>
 <br /><br /></p>
 </li>
-<li><p><b>A. Akhtar</b>, W. Gao, L. Li, Z. Li, W. Jia, and S. Liu, &ldquo;Video-based Point Cloud Compression Artifact Removal&rdquo;, 
+<li><p><b>A. Akhtar</b>, W. Gao, L. Li, Z. Li, W. Jia, and S. Liu, &ldquo;Video-based Point Cloud Compression Artifact Removal&rdquo;,
 <br /> IEEE Transactions on Multimedia (T-MM), 2021. <a href="https://arxiv.org/abs/2107.14179">(pdf)</a>
 <br /><br /></p>
 </li>
@@ -293,7 +295,7 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <br /> IEEE Transactions on Multimedia (T-MM), 2021.
 <br /><br /></p>
 </li>
-<li><p><b>A. Akhtar</b>, W. Gao, L. Li, Z. Li, X. Zhang, and S. Liu, &ldquo;Point Cloud Geometry Prediction Across Spatial Scale using Deep Learning&rdquo;, 
+<li><p><b>A. Akhtar</b>, W. Gao, L. Li, Z. Li, X. Zhang, and S. Liu, &ldquo;Point Cloud Geometry Prediction Across Spatial Scale using Deep Learning&rdquo;,
 <br /> IEEE Visual Communication &amp; Image Processing Conf (VCIP), Hong Kong, 2020. <a href="./Docs/Geometry_prediction.pdf">(pdf)</a>
 <br /><br /></p>
 </li>
@@ -330,8 +332,14 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <div class="blockcontent">
 <h2>MPEG Contributions</h2>
 <ul>
-<li><p>m59617. &ldquo;[AI-3DGC] Dynamic Point Cloud Geometry Compression using Sparse Convolutions&rdquo;
-<br /> <b>Anique Akhtar</b>, Zhu Li (UMKC), Geert Van der Auwera, Adarsh Krishnan Ramasubramonian, Luong Pham Van, Marta Karczewicz (Qualcomm)</p>
+<li><p><b>Anique Akhtar</b>, Zhu Li, Geert Van der Auwera, Adarsh Krishnan Ramasubramonian, Luong Pham Van, Marta Karczewicz,
+<br />&ldquo;Dynamic Point Cloud Geometry Compression using Sparse Convolutions&rdquo;, MPEG-137 Online, Doc. m59617, April 2022.</p>
+</li>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Birendra Kathariya, Adarsh Krishnan Ramasubramonian, Marta Karczewicz,
+<br />&ldquo;[AI-3DGC][EE5.3-related] Baseline attribute compression for ML-based PCC&rdquo;, MPEG-140 Online, Doc. m61313, Oct 2022.</p>
+</li>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Birendra Kathariya, Adarsh Krishnan Ramasubramonian, Marta Karczewicz,
+<br />&ldquo;[AI-3DGC][EE5.3-related] Update on baseline attribute compression for ML-based PCC&rdquo;, MPEG-141 Online, Doc. M62180, Jan 2023.</p>
 </li>
 </ul>
 </div></div>
@@ -464,7 +472,7 @@ Graduated: June 2013 <br /></p>
 <h2>Teaching Experience</h2>
 <ul>
 <li><p><b>University of Missouri-Kansas City</b> January. 2018 - Present <br />
-<b>Department of Computer Science</b> </p>
+<b>Department of Computer Science</b></p>
 <ul>
 <li><p>ECE/CS 479/5582, Computer Vision - Fall 2021</p>
 </li>
@@ -478,7 +486,7 @@ Graduated: June 2013 <br /></p>
 </ul>
 <ul>
 <li><p><b>Koc University</b> Aug. 2013 - July 2016 <br />
-<b>Department of Electrical Engineering</b> </p>
+<b>Department of Electrical Engineering</b></p>
 <ul>
 <li><p>ELEC 317, Microprocessors - Fall 2013</p>
 </li>
@@ -498,7 +506,7 @@ Graduated: June 2013 <br /></p>
 </ul>
 <ul>
 <li><p><b>Lahore University of Management Science</b> Aug. 2012- Jan. 2013 <br />
-<b>Department of Electrical Engineering</b> </p>
+<b>Department of Electrical Engineering</b></p>
 <ul>
 <li><p>EE 421, Digital System Design - Fall 2012</p>
 </li>
@@ -509,7 +517,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-04 13:42:12 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-11 23:44:44 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
