--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <ul>
 <li><p><b><a href="https://www.qualcomm.com/">Qualcomm</a></b>.   Current: (January. 2022 - Present) <br /></p>
 <ul>
-<li><p>Inter-Frame and Intra-Frame Dynamic Point Cloud COmpression.</p>
+<li><p>Inter-Frame and Intra-Frame Dynamic Point Cloud Compression.</p>
 </li>
 <li><p>Deep Learning-based Point Cloud Interpolation.</p>
 </li>
@@ -517,7 +517,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-11 23:44:44 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-11 23:56:46 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
