--- a/index.html
+++ b/index.html
@@ -19,22 +19,23 @@ Senior Engineer at Qualcomm Inc. <br />
 Ph.D. Doctorate in Computer and Electrical Engineering from <br />
 University of Missouri - Kansas City, Missouri, USA <br />
 Advisor: <a href="http://l.web.umkc.edu/lizhu/">Dr. Zhu Li</a><br /></p>
-<p><a href="./Docs/Resume_A_Akhtar.pdf">Resume (last updated: March 2023)</a><br />
-Email: akhtaranique AT gmail DOT com <br />
+<p><a href="./Docs/Resume_A_Akhtar.pdf">Resume (last updated: March 2024)</a><br />
 <a href="https://scholar.google.com/citations?hl=en&amp;user=hL-LaAQAAAAJ&amp;sortby=pubdate">Google Scholar Link</a> <br />
 <a href="https://www.linkedin.com/in/aniqueakhtar/">LinkedIn</a></p>
 </td></tr></table>
 <p><br />
-I am currently working as a Senior Engineer at Qualcomm Inc. working in the Multimedia, Research, and Development (MMRND) team in San Diego, California. <br /><br />
+Machine learning researcher with experience in deep learning, data compression, computer vision, and generative modeling. Currently working as a Senior Engineer at Qualcomm Inc. working in the Multimedia, Research, and Development (MMRND) team in San Diego, California. <br /><br />
 I completed my Ph.D. in Computer and Electrical Engineering from University of Missouri - Kansas City. During my doctorate, I was working under <a href="http://l.web.umkc.edu/lizhu/">Dr. Zhu Li</a> in the Multimedia Computing & Communication Lab.<br /><br />
 I did my M.S. in Electrical Engineering from <a href="http://www.ku.edu.tr/">Koc University</a>, Istanbul, Turkey,
-where I worked under <a href="http://home.ku.edu.tr/~sergen/">Dr. Sinem Coleri Ergen</a> in the <a href="http://wnl.ku.edu.tr/">Wireless Networks Laboratory</a> on 60 GHz directional wireless Communication.<br /><br />
+where I worked under <a href="https://mysite.ku.edu.tr/scoleri/">Dr. Sinem Coleri Ergen</a> in the <a href="http://wnl.ku.edu.tr/">Wireless Networks Laboratory</a> on 60 GHz directional wireless Communication.<br /><br />
 Prior to coming to Koc University, I did my B.Sc in Electrical Engineering at <a href="http://www.lums.edu.pk/">Lahore University of Management Sciences (LUMS)</a>, Lahore, Pakistan.
 <br /></p>
 <div class="infoblock">
 <div class="blockcontent">
 <h2>Announcements</h2>
 <ul>
+<li><p>Qualcomm recognition as an IP contributor. <b>2023</b></p>
+</li>
 <li><p>Recipient of the annual award for <b>Outstanding Doctoral Student in Electrical and Computer Engineering</b> for the academic year 2021-22. <b>May 2022</b></p>
 </li>
 <li><p>Made an official contribution and presented work in <i>MPEG WG 07 3D Graphics Coding</i> meeting regarding dynamic point cloud coding. <b>April 2022</b></p>
@@ -55,6 +56,10 @@ Prior to coming to Koc University, I did my B.Sc in Electrical Engineering at <a
 <div class="blockcontent">
 <h2>Research</h2>
 <ul>
+<li><p>Video-based dynamic mesh coding (V-DMC).</p>
+</li>
+<li><p>MPEG WG7 3DGCH: V-DMC and AI-PCC.</p>
+</li>
 <li><p>Inter-frame and Intra-frame Point Cloud Prediction Schemes.</p>
 </li>
 <li><p>End-to-end Point Cloud Compression.</p>
@@ -276,7 +281,7 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <h2>Publications</h2>
 <ul>
 <li><p><b>A. Akhtar</b>, Z. Li, and G. Van der Auwera, “Inter-Frame Compression for Dynamic Point Cloud Geometry Coding”
-<br />Under peer review. 2022 <a href="https://arxiv.org/pdf/2207.12554.pdf">(pdf)</a>
+<br />IEEE Transactions on Image Processing (TIP). 2024. <a href="https://ieeexplore.ieee.org/document/10380494/">(pdf)</a>
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, Z. Li, G. Van der Auwera, L. Li, and J. Chen, “PU-Dense: Sparse Tensor-based Point Cloud Geometry Upsampling” <b><a href="https://aniqueakhtar.github.io/publications/PU-Dense">(Project Page)</a></b> <a href="https://github.com/aniqueakhtar/PointCloudUpsampling">(GitHub)</a>
@@ -324,22 +329,29 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <div class="blockcontent">
 <h2>Patents</h2>
 <ul>
-<li><p><b>A. Akhtar</b>, W. Gao, X. Zhang, and S. Liu, TENCENT AMERICA LLC, 2022. POINT CLOUD GEOMETRY UPSAMPLING. U.S. Patent Application 17/345,063.</p>
+<li><p><b>A. Akhtar</b> A. Akhtar, W. Gao, X. Zhang, and S. Liu, Tencent America LLC, 2024. Point cloud geometry upsampling. U.S. Patent 11,893,691.</p>
+</li>
+<li><p><b>A. Akhtar</b>, G. Van der Auwera, A.K. Ramasubramonian, M. Karczewicz and L.P. Van, Qualcomm Inc, 2023. Geometry coordinate scaling for AI-based dynamic point cloud coding. U.S. Patent Application 18/318,498.</p>
 </li>
 </ul>
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
-<h2>MPEG Contributions</h2>
+<h2>Noticeable MPEG Contributions</h2>
 <ul>
-<li><p><b>Anique Akhtar</b>, Zhu Li, Geert Van der Auwera, Adarsh Krishnan Ramasubramonian, Luong Pham Van, Marta Karczewicz,
-<br />&ldquo;Dynamic Point Cloud Geometry Compression using Sparse Convolutions&rdquo;, MPEG-137 Online, Doc. m59617, April 2022.</p>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Reetu Hooda, Adarsh Krishnan Ramasubramonian, Marta Karczewicz, “[V-DMC][New] Implementation of Normal Encoding in V-DMC TMM v6.0 ”, MPEG-145 Online, Doc. m66553, Jan 2024.</p>
 </li>
-<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Birendra Kathariya, Adarsh Krishnan Ramasubramonian, Marta Karczewicz,
-<br />&ldquo;[AI-3DGC][EE5.3-related] Baseline attribute compression for ML-based PCC&rdquo;, MPEG-140 Online, Doc. m61313, Oct 2022.</p>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Reetu Hooda, Adarsh Krishnan Ramasubramonian, Marta Karczewicz, “[V-DMC][New] On Basemesh”, MPEG-144 Hannover, Doc. m65333, Oct 2023.</p>
 </li>
-<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Birendra Kathariya, Adarsh Krishnan Ramasubramonian, Marta Karczewicz,
-<br />&ldquo;[AI-3DGC][EE5.3-related] Update on baseline attribute compression for ML-based PCC&rdquo;, MPEG-141 Online, Doc. M62180, Jan 2023.</p>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Adarsh Krishnan Ramasubramonian, Marta Karczewicz, “[AI-3DGC][EE 5.5 related] Software release for Hybrid AI-based Geometry + G-PCC Attribute Coding”, MPEG-143 Geneva, Doc. m64441, July 2023.</p>
+</li>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Birendra Kathariya, Adarsh Krishnan Ramasubramonian, Marta Karczewicz, “[AI-3DGC][EE5.3-related] Update on baseline attribute compression for ML-based PCC”, MPEG-142 Antalya, Doc. m63255, April 2023.</p>
+</li>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Birendra Kathariya, Adarsh Krishnan Ramasubramonian, Marta Karczewicz, “[AI-3DGC][EE5.3-related] Baseline attribute compression for ML-based PCC”, MPEG-140 Mainz, Doc. m61313, Oct 2022.</p>
+</li>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Adarsh Krishnan Ramasubramonian, Marta Karczewicz, “[AI-3DGC][EE5.3 Test 2] Results dynamic point cloud compression”, MPEG-140 Mainz, Doc. m61201, Oct 2022.</p>
+</li>
+<li><p><b>Anique Akhtar</b>, Zhu Li, Geert Van der Auwera, Adarsh Krishnan Ramasubramonian, Luong Pham Van, Marta Karczewicz, “Dynamic Point Cloud Geometry Compression using Sparse Convolutions”, MPEG-137 Online, Doc. m59617, April 2022.</p>
 </li>
 </ul>
 </div></div>
@@ -349,7 +361,11 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <ul>
 <li><p><b><a href="https://www.qualcomm.com/">Qualcomm</a></b>.   Current: (January. 2022 - Present) <br /></p>
 <ul>
-<li><p>Inter-Frame and Intra-Frame Dynamic Point Cloud Compression.</p>
+<li><p>Video-based dynamic mesh coding (V-DMC).</p>
+</li>
+<li><p>MPEG WG7 3DGCH: V-DMC and AI-PCC.</p>
+</li>
+<li><p>Inter-Frame and Intra-Frame Dynamic Point Cloud Compression using Deep Learning.</p>
 </li>
 <li><p>Deep Learning-based Point Cloud Interpolation.</p>
 </li>
@@ -447,7 +463,7 @@ Expected Graduation: January 2021 <br /></p>
 Koc University, Istanbul. Turkey <br />
 Graduated: July 2015 <br /></p>
 <ul>
-<li><p>Advisor: <a href="http://home.ku.edu.tr/~sergen/">Dr. Sinem Coleri Ergen</a></p>
+<li><p>Advisor: <a href="https://mysite.ku.edu.tr/scoleri/">Dr. Sinem Coleri Ergen</a></p>
 </li>
 <li><p>Research: Efficient Communication using 60 GHz technology in WLAN.
 <br /></p>
@@ -517,7 +533,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-11 23:56:46 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-12 15:13:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
