--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <div class="blockcontent">
 <h2>Patents</h2>
 <ul>
-<li><p><b>A. Akhtar</b> A. Akhtar, W. Gao, X. Zhang, and S. Liu, Tencent America LLC, 2024. Point cloud geometry upsampling. U.S. Patent 11,893,691.</p>
+<li><p><b>A. Akhtar</b>, W. Gao, X. Zhang, and S. Liu, Tencent America LLC, 2024. Point cloud geometry upsampling. U.S. Patent 11,893,691.</p>
 </li>
 <li><p><b>A. Akhtar</b>, G. Van der Auwera, A.K. Ramasubramonian, M. Karczewicz and L.P. Van, Qualcomm Inc, 2023. Geometry coordinate scaling for AI-based dynamic point cloud coding. U.S. Patent Application 18/318,498.</p>
 </li>
@@ -533,7 +533,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-12 15:13:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-12 15:41:20 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
