--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@ Senior Engineer at Qualcomm Inc. <br />
 Ph.D. Doctorate in Computer and Electrical Engineering from <br />
 University of Missouri - Kansas City, Missouri, USA <br />
 Advisor: <a href="http://l.web.umkc.edu/lizhu/">Dr. Zhu Li</a><br /></p>
-<p><a href="./Docs/Resume_A_Akhtar.pdf">Resume (last updated: March 2024)</a><br />
-<a href="https://scholar.google.com/citations?hl=en&amp;user=hL-LaAQAAAAJ&amp;sortby=pubdate">Google Scholar Link</a> <br />
+<p><a href="https://scholar.google.com/citations?hl=en&amp;user=hL-LaAQAAAAJ&amp;sortby=pubdate">Google Scholar Link</a> <br />
 <a href="https://www.linkedin.com/in/aniqueakhtar/">LinkedIn</a></p>
 </td></tr></table>
 <p><br />
@@ -34,6 +33,14 @@ Prior to coming to Koc University, I did my B.Sc in Electrical Engineering at <a
 <div class="blockcontent">
 <h2>Announcements</h2>
 <ul>
+<li><p>Four patents published in <b>2024</b></p>
+</li>
+<li><p>Publication in Transactions on Image Processing (TIP). &ldquo;Inter-Frame Compression for Dynamic Point Cloud Geometry Coding&rdquo;. <b>2024</b></p>
+</li>
+<li><p>ICIP conference publication: &ldquo;ResNeRF-PCAC: Super Resolving Residual Learning NeRF for High Efficiency Point Cloud Attributes Coding&rdquo;. <b>2024</b></p>
+</li>
+<li><p>MMSP publication: &ldquo;Sparse Convolution Based Point Cloud Attributes Deblocking with Graph Fourier Latent Representation&rdquo;. <b>2024</b></p>
+</li>
 <li><p>Qualcomm recognition as an IP contributor. <b>2023</b></p>
 </li>
 <li><p>Recipient of the annual award for <b>Outstanding Doctoral Student in Electrical and Computer Engineering</b> for the academic year 2021-22. <b>May 2022</b></p>
@@ -47,8 +54,6 @@ Prior to coming to Koc University, I did my B.Sc in Electrical Engineering at <a
 <li><p><i>PU-Dense</i> work accepted in Transactions on Image Processing (TIP). <b>March 2022</b></p>
 </li>
 <li><p><i>Dynamic Point Cloud Interpolation</i> work accepted in ICASSP. <b>Feb 2022</b></p>
-</li>
-<li><p>First inventor on the patent: <i>Point Cloud Geometry Upsampling</i>. U.S. Patent Application 17/345,063. <b>Jan 2022</b></p>
 </li>
 </ul>
 </div></div>
@@ -91,7 +96,7 @@ Prior to coming to Koc University, I did my B.Sc in Electrical Engineering at <a
 <h2>Project Work</h2>
 <table class="imgtable"><tr><td>
 <img src="./Figures/Inter-prediction.png" alt="alt text" width="510px" />&nbsp;</td>
-<td align="left"><p><b>Inter-prediction in Point Cloud Compression with Sparse Convolutional Networks</b> <br /><br />
+<td align="left"><p><b>Inter-prediction in Point Cloud Compression with Sparse Convolutional Networks</b> <a href="https://github.com/aniqueakhtar/PointCloudCompression">(GitHub)</a><br /><br />
 Internship work at <a href="https://www.qualcomm.com/">Qualcomm</a>.</p>
 <ul>
 <li><p>Deep learning solution for inter-frame compression of high resolution point clouds.</p>
@@ -113,7 +118,7 @@ Internship work at <a href="https://www.qualcomm.com/">Qualcomm</a>.</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="./Figures/Interpolation.png" alt="alt text" width="510px" />&nbsp;</td>
-<td align="left"><p><b>Dynamic Point Cloud Interpolation.</b> <a href="./Docs/Akhtar.ICASSP.2022.pdf">(pdf)</a><br /><br />
+<td align="left"><p><b>Dynamic Point Cloud Interpolation.</b> <br /><br />
 Internship work at <a href="https://www.qualcomm.com/">Qualcomm</a>.</p>
 <ul>
 <li><p>Deep learning-based point cloud interpolation framework for photorealistic dynamic point clouds.</p>
@@ -137,7 +142,7 @@ Summer Internship work at <a href="https://www.tencent.com/">Tencent</a>.</p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="./Figures/Geometry_prediction.gif" alt="alt text" width="510px" />&nbsp;</td>
-<td align="left"><p><b>Point Cloud Geometry Prediction Across Spatial Scale.</b> <a href="./Docs/Geometry_prediction.pdf">(pdf)</a> <br /><br />
+<td align="left"><p><b>Point Cloud Geometry Prediction Across Spatial Scale.</b>  <br /><br />
 Summer Internship work at <a href="https://www.tencent.com/">Tencent</a>.</p>
 <ul>
 <li><p>We propose a deep learning solution for point cloud geometry prediction scheme to upsample a lower Level-of-Detail (LoD) point cloud into a higher LoD point cloud.</p>
@@ -191,11 +196,11 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <img src="./Figures/LiDAR.gif" alt="alt text" width="500px" height="300px" />&nbsp;</td>
 <td align="left"><p><b>Realtime 3D Point Cloud Communication.</b><br /><br /></p>
 <ul>
-<li><p>Joint source-channel coding for robustness to different channel conditions. <a href="./Docs/Low_latency_scalable_point_cloud_communication.pdf">(pdf)</a></p>
+<li><p>Joint source-channel coding for robustness to different channel conditions.</p>
 </li>
 <li><p>Adaptive Modulation and Coding schemes for point cloud broadcasting.</p>
 </li>
-<li><p>Adaptive Random Network Coding (ARNC) for scalable point cloud multicasting. <a href="./Docs/V2I.pdf">(pdf)</a></p>
+<li><p>Adaptive Random Network Coding (ARNC) for scalable point cloud multicasting.</p>
 </li>
 <li><p>Low latency support for V2V as well as V2I communication</p>
 </li>
@@ -217,7 +222,7 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <img src="./Figures/pointcloud_compression.png" alt="alt text" width="500px" height="300px" />&nbsp;</td>
 <td align="left"><p><b>Non-Deep Learning-based 3D Point Cloud Geometry Compression.</b><br /><br /></p>
 <ul>
-<li><p>Binary Tree embedded Quad Tree (BTQT) source encoding. <a href="./Docs/Low_latency_scalable_point_cloud_communication.pdf">(pdf)</a> &amp; <a href="./Docs/V2I.pdf">(pdf)</a></p>
+<li><p>Binary Tree embedded Quad Tree (BTQT) source encoding.</p>
 </li>
 <li><p>Lossless point cloud geometry compression.</p>
 </li>
@@ -252,7 +257,7 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <img src="./Figures/5G.png" alt="alt text" width="500px" height="350px" />&nbsp;</td>
 <td align="left"><p><b>5G and Beyond.</b><br /><br /></p>
 <ul>
-<li><p>Resource allocation schemes for 5G heterogenous multi-numerology network. <a href="./Docs/Resource_allocation.pdf">(pdf)</a></p>
+<li><p>Resource allocation schemes for 5G heterogenous multi-numerology network.</p>
 </li>
 <li><p>Flexible waveform and numerology design for future cellular systems.</p>
 </li>
@@ -264,36 +269,44 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <img src="./Figures/mmwave.jpg" alt="alt text" width="500px" height="300px" />&nbsp;</td>
 <td align="left"><p><b>Directional mmWave Communication.</b><br /><br /></p>
 <ul>
-<li><p>Directional MAC Protocol for IEEE 802.11ad WLANs. <a href="./Docs/Directional_MAC_Protocol.pdf">(pdf)</a>  <b>(<a href="https://aniqueakhtar.github.io/publications/MAC/DMBS.html">PROJECT LINK</a>)</b></p>
+<li><p>Directional MAC Protocol for IEEE 802.11ad WLANs.  <b>(<a href="https://aniqueakhtar.github.io/publications/MAC/DMBS.html">PROJECT LINK</a>)</b></p>
 </li>
-<li><p>Efficient Network Level Beamforming Training for IEEE 802.11ad WLANs. <a href="./Docs/Beamforming_Training.pdf">(pdf)</a></p>
+<li><p>Efficient Network Level Beamforming Training for IEEE 802.11ad WLANs.</p>
 </li>
-<li><p>Energy Efficient MAC Protocol with Localization scheme for Wireless Sensor Networks using Directional Antennas. <a href="./Docs/Localization_scheme.pdf">(pdf draft)</a></p>
+<li><p>Energy Efficient MAC Protocol with Localization scheme for Wireless Sensor Networks using Directional Antennas.</p>
 </li>
-<li><p>Multi-hop network neighbor discovery and beamforming using directional antennas in 802.11ad WLANs. <a href="./Docs/doc4.pdf">(pdf draft)</a></p>
+<li><p>Multi-hop network neighbor discovery and beamforming using directional antennas in 802.11ad WLANs.</p>
 </li>
-<li><p>Optimization of link scheduling in directional wireless networks using Heuristic methods. <a href="./Docs/doc5.pdf">(pdf draft)</a></p>
+<li><p>Optimization of link scheduling in directional wireless networks using Heuristic methods.</p>
 </li>
 </ul>
 </td></tr></table>
 <div class="infoblock">
 <div class="blockcontent">
-<h2>Publications</h2>
+<h2>Relevant Publications</h2>
 <ul>
+<li><p>S. Umair, B. Kathariya, Z. Li, <b>A. Akhtar</b>, G. Van der Auwera. “ResNeRF-PCAC: Super Resolving Residual Learning NeRF for High Efficiency Point Cloud Attributes Coding”.
+<br />IEEE International Conference on Image Processing (ICIP), 2024. <a href="https://ieeexplore.ieee.org/abstract/document/10648090">(link)</a>
+<br /><br /></p>
+</li>
+<li><p>M. Talha, B. Kathariya, Z Li, <b>A. Akhtar</b>, G. Van der Auwera. “Sparse Convolution Based Point Cloud Attributes Deblocking with Graph Fourier Latent Representation”.
+<br />International Workshop on Multimedia Signal Processing (MMSP), 2024. <a href="https://ieeexplore.ieee.org/abstract/document/10743459">(link)</a>
+<br /><br /></p>
+</li>
 <li><p><b>A. Akhtar</b>, Z. Li, and G. Van der Auwera, “Inter-Frame Compression for Dynamic Point Cloud Geometry Coding”
-<br />IEEE Transactions on Image Processing (TIP). 2024. <a href="https://ieeexplore.ieee.org/document/10380494/">(pdf)</a>
+<br />IEEE Transactions on Image Processing (TIP). 2024. <a href="https://arxiv.org/abs/2207.12554">(arxiv)</a>
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, Z. Li, G. Van der Auwera, L. Li, and J. Chen, “PU-Dense: Sparse Tensor-based Point Cloud Geometry Upsampling” <b><a href="https://aniqueakhtar.github.io/publications/PU-Dense">(Project Page)</a></b> <a href="https://github.com/aniqueakhtar/PointCloudUpsampling">(GitHub)</a>
-<br />IEEE Transactions on Image Processing (TIP). 2022 <a href="https://ieeexplore.ieee.org/abstract/document/9794916">(pdf)</a>
+<br />IEEE Transactions on Image Processing (TIP). 2022 <a href="https://ieeexplore.ieee.org/abstract/document/9794916">(link)</a>
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, Z. Li, G. Van der Auwera, and J. Chen, “Dynamic Point Cloud Interpolation”
-<br />IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). 2022. <a href="./Docs/Akhtar.ICASSP.2022.pdf">(pdf)</a>
+<br />IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). 2022. <a href="https://ieeexplore.ieee.org/abstract/document/9747105">(link)</a>
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, W. Gao, L. Li, Z. Li, W. Jia, and S. Liu, &ldquo;Video-based Point Cloud Compression Artifact Removal&rdquo;,
-<br /> IEEE Transactions on Multimedia (T-MM), 2021. <a href="https://arxiv.org/abs/2107.14179">(pdf)</a>
+<br /> IEEE Transactions on Multimedia (T-MM), 2021. <a href="https://arxiv.org/abs/2107.14179">(arxiv)</a>
 <br /><br /></p>
 </li>
 <li><p>W. Jia, L. Li, <b>A. Akhtar</b>, Z. Li, and S. Liu, “Convolutional Neural Network-based Occupancy Map Accuracy Improvement for Video-based Point Cloud Compression”,
@@ -301,27 +314,27 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, W. Gao, L. Li, Z. Li, X. Zhang, and S. Liu, &ldquo;Point Cloud Geometry Prediction Across Spatial Scale using Deep Learning&rdquo;,
-<br /> IEEE Visual Communication &amp; Image Processing Conf (VCIP), Hong Kong, 2020. <a href="./Docs/Geometry_prediction.pdf">(pdf)</a>
+<br /> IEEE Visual Communication &amp; Image Processing Conf (VCIP), Hong Kong, 2020.
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, J. Ma, R. Shafin, J. Bai, L. Li, Z. Li, L. Liu, &ldquo;Low Latency Scalable Point Cloud Communication in VANETs using V2I Communication&rdquo;
-<br /> IEEE International Conference on Communications (ICC), Shanghai, China. 2019. <a href="./Docs/V2I.pdf">(pdf)</a>
+<br /> IEEE International Conference on Communications (ICC), Shanghai, China. 2019.
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, B. Kathariya, Z. Li, &ldquo;Low Latency Scalable Point Cloud Communication&rdquo;
-<br /> IEEE International Conference on Image Processing (ICIP), Taipei, Taiwan. 2019. <a href="./Docs/Low_latency_scalable_point_cloud_communication.pdf">(pdf)</a>
+<br /> IEEE International Conference on Image Processing (ICIP), Taipei, Taiwan. 2019.
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, H. Arslan, &ldquo;Downlink Resource Allocation and Packet Scheduling in Multi-Numerology Wireless Systems&rdquo;
-<br /> IEEE Wireless Communications and Networking Conference (IEEE WCNC), 2018. <a href="./Docs/Resource_allocation.pdf">(pdf)</a>
+<br /> IEEE Wireless Communications and Networking Conference (IEEE WCNC), 2018.
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, S. Coleri Ergen, &ldquo;Directional MAC Protocol for IEEE 802.11ad WLANs&rdquo;
-<br /> Ad Hoc Networks, 2018.  <a href="./Docs/Directional_MAC_Protocol.pdf">(pdf)</a>  <b>(<a href="https://aniqueakhtar.github.io/publications/MAC/DMBS.html">Protocol's website with explanation and open source code</a>)</b>
+<br /> Ad Hoc Networks, 2018.  <b>(<a href="https://aniqueakhtar.github.io/publications/MAC/DMBS.html">Protocol's website with explanation and open source code</a>)</b>
 <br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, S. Coleri Ergen, &ldquo;Efficient Network Level Beamforming Training for IEEE 802.11ad WLANs&rdquo;
-<br /> International Symposium on Performance Evaluation of Computer and Telecommunication Systems (SPECTS 2015), Chicago, Illinois, US. July 2015  <a href="./Docs/Beamforming_Training.pdf">(pdf)</a></p>
+<br /> International Symposium on Performance Evaluation of Computer and Telecommunication Systems (SPECTS 2015), Chicago, Illinois, US. July 2015</p>
 </li>
 </ul>
 </div></div>
@@ -329,7 +342,17 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 <div class="blockcontent">
 <h2>Patents</h2>
 <ul>
-<li><p><b>A. Akhtar</b>, W. Gao, X. Zhang, and S. Liu, Tencent America LLC, 2024. Point cloud geometry upsampling. U.S. Patent 11,893,691.</p>
+<li><p><b>A. Akhtar</b>, G. Van der Auwera, A.K. Ramasubramonian, and M. Karczewicz, Qualcomm Inc, 2024. Attribute coding and upscaling for point cloud compression. U.S. Patent App. 18/632,140.
+<br /><br /></p>
+</li>
+<li><p><b>A. Akhtar</b>, G. Van der Auwera, A.K. Ramasubramonian, and M. Karczewicz, Qualcomm Inc, 2024. Attribute coding for point cloud compression. U.S. Patent Application 18/624,683.
+<br /><br /></p>
+</li>
+<li><p><b>A. Akhtar</b>, G. Van der Auwera, A.K. Ramasubramonian, and M. Karczewicz, Qualcomm Inc, 2024. Attribute coding for point cloud compression. U.S. Patent Application 18/490,467.
+<br /><br /></p>
+</li>
+<li><p><b>A. Akhtar</b>, W. Gao, X. Zhang, and S. Liu, Tencent America LLC, 2024. Point cloud geometry upsampling. U.S. Patent 11,893,691.
+<br /><br /></p>
 </li>
 <li><p><b>A. Akhtar</b>, G. Van der Auwera, A.K. Ramasubramonian, M. Karczewicz and L.P. Van, Qualcomm Inc, 2023. Geometry coordinate scaling for AI-based dynamic point cloud coding. U.S. Patent Application 18/318,498.</p>
 </li>
@@ -337,11 +360,19 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
-<h2>Noticeable MPEG Contributions</h2>
+<h2>Notable MPEG Contributions</h2>
 <ul>
-<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Reetu Hooda, Adarsh Krishnan Ramasubramonian, Marta Karczewicz, “[V-DMC][New] Implementation of Normal Encoding in V-DMC TMM v6.0 ”, MPEG-145 Online, Doc. m66553, Jan 2024.</p>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Adarsh Krishnan Ramasubramonian, Reetu Hooda, Marta Karczewicz “[V-DMC][EE4.4] Report on EE 4.4g on context selection for normals”, MPEG-148 Kemer, Doc. m70254, Oct 2024.</p>
 </li>
-<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Reetu Hooda, Adarsh Krishnan Ramasubramonian, Marta Karczewicz, “[V-DMC][New] On Basemesh”, MPEG-144 Hannover, Doc. m65333, Oct 2023.</p>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Adarsh Krishnan Ramasubramonian, Reetu Hooda, Marta Karczewicz “[V-DMC][EE4.4] EE 4.4f on Improvement to normal encoding”, MPEG-148 Kemer, Doc. m69981, Oct 2024.</p>
+</li>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Adarsh Krishnan Ramasubramonian, Reetu Hooda, Marta Karczewicz “[V-DMC][EE4.4-related][New] Basemesh fixed point implementation of normal encoding”, MPEG-148 Kemer, Doc. m69977, Oct 2024.</p>
+</li>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Reetu Hooda, Adarsh Krishnan Ramasubramonian, Marta Karczewicz “[V-DMC][EE4.4] Octahedral Normal Encoding”, MPEG-146 Rennes, Doc. m67554, April 2024.</p>
+</li>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Reetu Hooda, Adarsh Krishnan Ramasubramonian, Marta Karczewicz “[V-DMC][EE4.4] Normal Encoding in V-DMC v7.0”, MPEG-146 Rennes, Doc. m67553, April 2024.</p>
+</li>
+<li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Reetu Hooda, Adarsh Krishnan Ramasubramonian, Marta Karczewicz, “[V-DMC][New] Implementation of Normal Encoding in V-DMC TMM v6.0 ”, MPEG-145 Online, Doc. m66553, Jan 2024.</p>
 </li>
 <li><p><b>Anique Akhtar</b>, Geert Van der Auwera, Adarsh Krishnan Ramasubramonian, Marta Karczewicz, “[AI-3DGC][EE 5.5 related] Software release for Hybrid AI-based Geometry + G-PCC Attribute Coding”, MPEG-143 Geneva, Doc. m64441, July 2023.</p>
 </li>
@@ -410,31 +441,6 @@ Summer Internship at <a href="https://www.here.com/en">HERE Technologies</a>.</p
 </li>
 </ul>
 
-</li>
-</ul>
-</div></div>
-<div class="infoblock">
-<div class="blockcontent">
-<h2>Unpublished Work</h2>
-<ul>
-<li><p><b>A. Akhtar</b>, Z. Li, &ldquo;Point Cloud Denoising using Deep Neural Networks&rdquo;
-<br /> 2020. Outlier removal as well as surface denoising to achieve state-of-the-art denoising on point cloud data.
-<br /><br /></p>
-</li>
-<li><p><b>A. Akhtar</b>, Y. Yilmaz, &ldquo;Machine Learning for Market Trend Prediction in Bitcoin&rdquo;
-<br /> 2017. Using traditional financial Technical Analysis (TA) coupled with deep learning techniques to predict Bitcoin price.  <a href="./Docs/doc7.pdf">(pdf draft)</a>
-<br /><br /></p>
-</li>
-<li><p><b>A. Akhtar</b>, S. Coleri Ergen, &ldquo;Energy Efficient MAC Protocol with Localization scheme for Wireless Sensor Networks using Directional Antennas.&rdquo;
-<br /> 2015. Energy efficient MAC protocol for with localization scheme using beamforming.  <a href="./Docs/Localization_scheme.pdf">(pdf draft)</a>
-<br /><br /></p>
-</li>
-<li><p><b>A. Akhtar</b>, O. Ozkasap, &ldquo;Multi-hop network neighbor discovery and beamforming using directional antennas in 802.11ad WLANs&rdquo;
-<br /> 2014. Unpublished.  <a href="./Docs/doc4.pdf">(pdf draft)</a>
-<br /><br /></p>
-</li>
-<li><p><b>A. Akhtar</b>, Ceyda Oguz, &ldquo;Optimization of link scheduling in directional wireless networks using Heuristic methods&rdquo;
-<br /> 2014. We propose multiple heuristic methods to solve the problem at hand and discuss how the problem behaves in different scenarios.  <a href="./Docs/doc5.pdf">(pdf draft)</a></p>
 </li>
 </ul>
 </div></div>
@@ -533,7 +539,7 @@ Graduated: June 2013 <br /></p>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-12 15:41:20 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-24 03:35:27 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
